test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/subscript_non_ptr.plx
pub fn main(none) i32 {
    a: i32 = 3
    #  one operand in a subscript operation must be a pointer
    return a[4]
}
